--- a/profile_inv.html
+++ b/profile_inv.html
@@ -43,7 +43,7 @@
                         <div class="col-md-6" style="padding-bottom:20px"><label class="labels"><h6>Country</h6></label><input type="text" class="form-control" placeholder="country" value=""></div>
                         <div class="col-md-6"><label class="labels"><h6>State/Region</h6></label><input type="text" class="form-control" value="" placeholder="state"></div>
                     </div>
-                    <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
+                    <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button" onclick="window.location = 'investordashboard.html'">Save Profile</button></div>
                 </div>
             </div>
             <div class="col-md-4">
