--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img class="title-img" src="images/Investify_logo-removebg-preview.png" alt="iphone-mockup">
+          <img class="title-img" src="Investify_logo-removebg-preview.png" alt="iphone-mockup">
         </div>
       </div>
 
@@ -121,7 +121,7 @@
           <h2 class="testimonial-text">"I had been struggling to find investors for my startup, but once I signed up for
             Investify, I was able to connect with several interested investors within just a few days. The platform
             made the whole process so much easier and efficient."</h2>
-          <img class="" id="timage" src="images/netflix.png" alt="dog-profile">
+          <img class="" id="timage" src="netflix.png" alt="dog-profile">
 
         </div>
         <div class="carousel-item">
@@ -129,7 +129,7 @@
             was difficult to sift through all the noise. This platform made it simple to filter through startups based
             on industry, funding stage, and other important criteria. I was able to find several high-potential startups
             that I ended up investing."</h2>
-          <img class="" id="timage" src="images/gs.png" alt="lady-profile">
+          <img class="" id="timage" src="gs.png" alt="lady-profile">
 
 
         </div>
@@ -138,7 +138,7 @@
             investors on this platform who were interested in my company. The process of connecting with potential
             investors was streamlined and efficient, and I was able to secure funding in a matter of weeks. I would
             definitely use this platform again in the future."</h2>
-          <img class="" id="timage" src="images/google.png" alt="lady-profile">
+          <img class="" id="timage" src="google.png" alt="lady-profile">
 
         </div>
 
@@ -167,11 +167,11 @@
 
     <p id="aub">
       As used by <img class="press-image" src="images/google.png" alt="tc-logo">
-      <img class="press-image" src="images/microsoft.png" alt="tnw-logo">
-      <img class="press-image" src="images/amazon.png" alt="biz-insider-logo">
-      <img class="press-image" src="images/netflix.png" alt="mashable-logo">
-      <img class="press-image" src="images/Adobe-Logo.png" alt="biz-insider-logo">
-      <img class="press-image" src="images/gs.png" alt="mashable-logo">
+      <img class="press-image" src="microsoft.png" alt="tnw-logo">
+      <img class="press-image" src="amazon.png" alt="biz-insider-logo">
+      <img class="press-image" src="netflix.png" alt="mashable-logo">
+      <img class="press-image" src="Adobe-Logo.png" alt="biz-insider-logo">
+      <img class="press-image" src="gs.png" alt="mashable-logo">
 
     </p>
 
