--- a/register_inv.html
+++ b/register_inv.html
@@ -16,7 +16,7 @@
     <!-- <img src="images/Investify black.png"> -->
 	<div class="form-container sign-up-container">
 		<form action="" method="post" id="InvestorRegisterData">
-            <img src="images/Investify black.png" id="logo">
+            <img src="Investify black.png" id="logo">
 			<h2>Create Account as Investor</h2>
 			<div class="social-container">
 				<a href="#" class="social" id="icons"><i class="fab fa-facebook-f" ></i></a>
@@ -32,7 +32,7 @@
 	</div>
 	<div class="form-container sign-in-container">
 		<form action="#">
-            <img src="images/Investify black.png" id="logo">
+            <img src="Investify black.png" id="logo">
 			<h2>Sign in as Investor</h2>
 			<div class="social-container">
 				<a href="#" class="social" id="icons"><i class="fab fa-facebook-f"></i></a>
