--- a/register_startup.html
+++ b/register_startup.html
@@ -19,7 +19,7 @@
     <!-- <img src="images/Investify black.png"> -->
 	<div class="form-container sign-up-container">
 		<form action="" method="post" id="startupcreateaccount">
-            <img src="images/Investify black.png" id="logo">
+            <img src="Investify black.png" id="logo">
 			<h2>Create Account as StartUp</h2>
 			<div class="social-container">
 				<a href="#" class="social" id="icons"><i class="fab fa-facebook-f" ></i></a>
@@ -35,7 +35,7 @@
 	</div>
 	<div class="form-container sign-in-container">
 		<form action="#">
-            <img src="images/Investify black.png" id="logo">
+            <img src="Investify black.png" id="logo">
 			<h2>Sign in as  StartUp</h2>
 			<div class="social-container">
 				<a href="#" class="social" id="icons"><i class="fab fa-facebook-f"></i></a>
